  signatures for functions/methods)

  Limitations:

  - Doesn't mock magic methods or attributes (it creates MagicMocks, so the
    magic methods are *there*, they just don't have the signature mocked nor
    are attributes followed)
  - Doesn't mock function / method attributes
  - Uses object traversal on the objects being mocked to determine types - so
    will trigger properties etc
  - The return value of mocked classes (the 'instance') has the same call
    signature as the class __init__ (as they share the same spec)

  You create auto-specced mocks by passing `autospec=True` to `patch`.

  Note that attributes that are None are special cased and mocked without a
  spec (so any attribute / method can be used). This is because None is
  typically used as a default value for attributes that may be of some other
  type, and as we don't know what type that may be we allow all access.

  Note that the `autospec` option to `patch` obsoletes the `mocksignature`
  option.

* Added the `create_autospec` function for manually creating 'auto-specced'
  mocks
* Removal of deprecated `patch_object`


2011/05/30 Version 0.7.2
------------------------

* BUGFIX: instances of list subclasses can now be used as mock specs
* BUGFIX: MagicMock equality / inequality protocol methods changed to use the
  default equality / inequality. This is done through a `side_effect` on
  the mocks used for `__eq__` / `__ne__`


2011/05/06 Version 0.7.1
------------------------

Package fixes contributed by Michael Fladischer. No code changes.

* Include template in package
* Use isolated binaries for the tox tests
* Unset executable bit on docs
* Fix DOS line endings in getting-started.txt


2011/03/05 Version 0.7.0
------------------------

No API changes since 0.7.0 rc1. Many documentation changes including a stylish
new `Sphinx theme <https://github.com/coordt/ADCtheme/>`_.

The full set of changes since 0.6.0 are:

* Python 3 compatibility