@@ -110,7 +110,9 @@ mock 0.8.0 is the last version that will support Python 2.4.
     are attributes followed)
   - Doesn't mock function / method attributes
   - Uses object traversal on the objects being mocked to determine types - so
-    will trigger properties etc
+    properties etc may be triggered
+  - Where a class is the autospec, then properties will have `property` as
+    the spec, which is probably not what is intended
   - The return value of mocked classes (the 'instance') has the same call
     signature as the class __init__ (as they share the same spec)
 
